<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
android:id="@+id/widget31"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:orientation="vertical"
android:gravity="left"
xmlns:android="http://schemas.android.com/apk/res/android"
>
<LinearLayout
android:id="@+id/buttonlayout"
android:layout_width="fill_parent"
android:layout_height="35dp"
android:background="#ff2b60de"
>
<Button
android:id="@+id/btnClear"
android:layout_width="83dp"
android:layout_height="34dp"
android:text="@string/Clear"
>
</Button>
<Button
android:id="@+id/btnSave"
android:layout_width="83dp"
android:layout_height="34dp"
android:text="@string/Save"
>
</Button>
<Button
android:id="@+id/btnBack"
android:layout_width="83dp"
android:layout_height="34dp"
android:text="@string/Back"
>
</Button>
</LinearLayout>
<LinearLayout
android:id="@+id/buttonlayout2"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
>
<ListView
android:id="@+id/android:list"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
>
</ListView>
</LinearLayout>
</LinearLayout>
